--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "db:init": "ts-node src/db/config.db.ts",
+    "dev": "npm run db:init &&  nodemon --exec ts-node src/app.ts",
     "lint": "eslint 'src/**/*.{ts}' --fix",
     "format": "prettier --write 'src/**/*.{ts}'"
   },
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "8.18.0",
     "@typescript-eslint/parser": "8.18.0",
     "eslint": "9.17.0",
